tests/test_input_files/good/test_good_var_decl_6.punkt
main {
	var x = 0.
	if x == 1 {
		x = 1.
		println "setting x <- 1".
	}
	println x.
}
