tests/test_input_files/bad/test_bad_if_stmt_7.punkt
main {
  if true
    println "hey".
  else
    var x = 1.
  println x.
}
